added potential gui designs for food wrecks

--- a/_posts/2023-07-07-Food App.md
+++ b/_posts/2023-07-07-Food App.md
@@ -28,7 +28,17 @@ The system should meet the following user requirements:
 An overview of the system's objectives and goals. 
 
 ### 2.1 User Interface Design
-To be done with [figma](https://www.figma.com)
+Similar landing page design:
+![Landing page](../assets/gui/landing.png)
+
+Similar explore page design
+![Explore page](../assets/gui/explore.png)
+
+Similar selected food page design
+![Food page](../assets/gui/house.png)
+
+Similar recommend food page design
+![Recommend page](../assets/gui/recommend.png)
 
 ### 2.2 Objectives 
 - [ ] Create the app, recommendation engine and UI
@@ -54,6 +64,7 @@ To be done with [figma](https://www.figma.com)
 
 ### Data Model
 The system's data model will include objects such as: users, recipes, and restaurants. 
+
 **Sample User Data (not finished):**
 ```json
 {
