--- a/_posts/2023-07-07-Food App.md
+++ b/_posts/2023-07-07-Food App.md
@@ -34,13 +34,14 @@ Similar landing page design:
 Similar explore page design
 ![Explore page](../assets/gui/explore.png)
 
-Similar selected food page design
-![Food page](../assets/gui/house.png)
+![Food page](../assets/gui/food-page.png)
 
-Similar recommend food page design
-![Recommend page](../assets/gui/recommend.png)
+![Recommend page](../assets/gui/front-page.png)
 
-### 2.2 Objectives 
+### 2.2 Objectives/Roadmap
+- [x] Create intial GUI
+- - [x] List all recipes on front page
+- - [ ] Filter recipes/search
 - [ ] Create the app, recommendation engine and UI
 - [ ] Account for allergies (potentially with [Fig](https://foodisgood.com))
 - [ ] Create family groups (personalized meals for families)
@@ -50,7 +51,13 @@ Similar recommend food page design
 - [ ] Allow users to submit own recipes
 - [ ] Create review or rating system, which could be factored into recommendation engine
 - [ ] Reservations for Restaurants, could use [OpenTable](https://www.opentable.com)
+- [ ] Create friend groups for suggesting recommendations
 
+### Initial Process
+Once user signs up with Google or email & password, prompt with the following:
+
+Continue without selecting choices (this will make our recommendations a little inaccurate)
+Select preferred restaurants/recipes
 
 ## 3 Functional Specifications
 
