--- a/_posts/2023-07-07-Food App.md
+++ b/_posts/2023-07-07-Food App.md
@@ -40,8 +40,13 @@ Similar explore page design
 
 ### 2.2 Objectives/Roadmap
 - [x] Create intial GUI
+- Finish by 8/9
 - - [x] List all recipes on front page
 - - [ ] Filter recipes/search
+- - [ ] Add authentication
+- - [ ] Add database 
+- - [ ] New UI
+- - [ ] Switch to BBCFoods dataset
 - [ ] Create the app, recommendation engine and UI
 - [ ] Account for allergies (potentially with [Fig](https://foodisgood.com))
 - [ ] Create family groups (personalized meals for families)
